Fennec and Geckoview fire resize events on page-load while Chromium does not
Categories
(Core :: Layout, defect, P1)
Tracking
()
People
(Reporter: twisniewski, Assigned: hiro)
References
()
Details
(Keywords: dev-doc-complete, Whiteboard: [webcompat:p1][wptsync upstream])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
Details |
Based on a trivial test-case:
<!DOCTYPE html>
<html>
<script>
window.addEventListener("resize", function() {
document.body.appendChild(document.createTextNode("resize "));
});
</script>
</html>
It seems as though Firefox fires a resize event during page-load while Chromium does not (though Chromium does fire similar resize events when the device changes orientation).
This extra resize event is throwing off the scripts at eduscol.education.fr, which do not expect it, and causes their page to not load properly.
Updated•7 years ago
|
| Reporter | ||
Comment 1•7 years ago
|
||
This is also affecting swimmeet.com, making the page never stop (re)loading.
Updated•7 years ago
|
Comment 2•7 years ago
|
||
Hiro, you've done a bunch of viewport-related stuff, any chance you know what's going on here?
| Assignee | ||
Comment 3•7 years ago
•
|
||
The initial resize event is triggered from ResizeReflowIgnoreOverride call in RefreshVisualViewportSize on the initial paint. Probably we don't need the resize event at that time.
Also, in bug 1149555 unfortunately (accidentally?) we dropped the check whether the size is changed.
| Assignee | ||
Comment 4•7 years ago
•
|
||
I thought initially we can avoid the resize event on the case where nsIPresShell::mIsFirstPaint is true, but it breaks existing test cases a lot.
We should probably avoid the event only on the case MobileViewportManager::mIsFirstPaint is true. Here is a try.
Comment 5•7 years ago
|
||
https://webcompat.com/issues/25660
Probably a candidate for this bug.
Updated•7 years ago
|
Comment 6•7 years ago
|
||
ni? myself to discuss this at next webcompat triage.
Updated•7 years ago
|
Comment 7•7 years ago
|
||
@Hiro: Would you mind prioritizing this once all of the scroll snap and current Fission work is complete?
| Assignee | ||
Comment 8•7 years ago
|
||
Sure, I can finish this in 68 train.
| Assignee | ||
Comment 9•7 years ago
|
||
| Assignee | ||
Comment 10•7 years ago
|
||
Comment 11•7 years ago
|
||
Comment 12•7 years ago
|
||
| bugherder | ||
Comment 14•7 years ago
|
||
It seems like a largish change to uplift but it was recentely raised to P1, so I am marking it as fix-optional until there is confirmation that we don't need this is 67 or that we want it but it is extra safe to uplift.
Updated•7 years ago
|
Updated•7 years ago
|
Updated•7 years ago
|
Comment 17•6 years ago
|
||
Documentation updated:
- BCD PR 4358 submitted
- Firefox 68 for developers updated
Description
•