Bug 1528052 - Suppress resize events until the initial paint has finished on mobile. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D28172