layout/base/GeckoMVMContext.h
@@ -52,7 +52,8 @@ class GeckoMVMContext : public MVMContext {
   void SetVisualViewportSize(const CSSSize& aSize) override;
   void UpdateDisplayPortMargins() override;
   MOZ_CAN_RUN_SCRIPT_BOUNDARY
-  void Reflow(const CSSSize& aNewSize, const CSSSize& aOldSize) override;
+  void Reflow(const CSSSize& aNewSize, const CSSSize& aOldSize,
+              ResizeEventFlag aResizeEventFlag) override;
 
  private:
   RefPtr<dom::Document> mDocument;
